--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -23,3 +23,8 @@
 .v-data-table-footer {
   padding-top: 40px;
 }
+
+.v-data-table-header__content {
+  font-weight: bold !important;
+  color: #081419 !important;
+}
